// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Menu Basic Menu 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-104"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="button-text-medium"
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Link Menu 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-105"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="button-text-medium"
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Footer 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-106"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="button-text-medium"
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Header 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-107"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="button-text-medium"
    >
      Menu dropdown
    </span>
  </button>
</div>
`;

exports[`Storyshots Menu Menu Sub Header 1`] = `
<div
  className="main-wrapper"
>
  <button
    aria-controls="dropdown-108"
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup={true}
    className="button button-default button-medium pill-shape"
    defaultChecked={false}
    disabled={false}
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="button-text-medium"
    >
      Menu dropdown
    </span>
  </button>
</div>
`;
